# prosjektoppgave

./: .gitignore  README.md  build.sh  setup.sh
Fisheyecapture/: README.md  build.sh
Fisheyecapture/FisheyeCaptureClient/include/: ImageCaptureCube.hpp  fisheye.hpp  fisheyetransformer.hpp
Fisheyecapture/FisheyeCaptureClient/src/: fisheye.cpp  fisheyetransformer.cpp  main.cpp
Fisheyecapture/cmake/: CMakeLists.txt
Fisheyecapture/cmake/AirLib/: CMakeLists.txt
Fisheyecapture/cmake/FisheyeCaptureClient/: CMakeLists.txt
Fisheyecapture/cmake/cmake_modules/: CommonSetup.cmake
Fisheyecapture/cmake/rpclib_wrapper/: CMakeLists.txt
Fisheyecapture/src/: main.cpp
IndoorAirSim/: .gitignore  IndoorAirSim.uproject
IndoorAirSim/Config/: DefaultEngine.ini  DefaultGame.ini
IndoorAirSim/Plugins/AirSim/Content/Blueprints/: BP_FlyingPawn.uasset
IndoorAirSim/Plugins/AirSim/Source/: PIPCamera.cpp
IndoorAirSim/Plugins/AirSim/Source/AirLib/include/api/: RpcLibAdapatorsBase.hpp
IndoorAirSim/Plugins/AirSim/Source/AirLib/include/sensors/: SensorBase.hpp
IndoorAirSim/Plugins/AirSim/Source/Vehicles/Multirotor/: FlyingPawn.cpp  FlyingPawn.h
IndoorAirSim/Source/: IndoorAirSim.Target.cs  IndoorAirSimEditor.Target.cs
IndoorAirSim/Source/IndoorAirSim/: IndoorAirSim.Build.cs  IndoorAirSim.cpp  TestActor.h
Unreal/src/: apiHeader.hpp  flightroutine.cpp
airsim/: CMakeLists.txt  package.xml
airsim/scripts/: drone_image_raw.py  flightroutine.py
catkin_ws/src/cmake_modules/: CommonSetup.cmake
catkin_ws/src/ros_api/: CMakeLists.txt  package.xml
catkin_ws/src/ros_api/include/: ros_api.hpp
catkin_ws/src/ros_api/src/: ros_api.cpp
rapport/: Abstract.tex  abbreviations.tex  c1_intro.tex  c2_theory.tex  c3_engines.tex  c3_simulator.tex  c3_simulatorimplementation.tex  c4_results_discussion.tex  c4_simulator_inplementation.tex  c5_conclusion_furtherwork.tex  c5_simulator_tests.tex  c6_results_discussion.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  docsetup.tex  main.tex  mylib.bib  preface.tex  references.tex  symbols.tex
rapport/fig/Results/: transformtime.eps
rapport/fig/Theory/: perspective_projection.eps  view_frustrum.eps
